--- a/style.css
+++ b/style.css
@@ -321,3 +321,22 @@ main {
     transform: translate(-6px, 8px) rotate(10deg);
   }
 }
+
+@keyframes appear {
+  from {
+    opacity: 0;
+    transform: scale(0);
+  }
+  to {
+    opacity: 1;
+    transform: scale(1);
+  }
+}
+
+.appear {
+  animation: appear 1s ease forwards;
+}
+.use-appear {
+  opacity: 0;
+  transform: scale(0);
+}
